--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.0",
-    "@prisma/client": "^6.12.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-select": "^2.2.5",
@@ -48,13 +47,16 @@
     "zod": "^4.0.10"
   },
   "devDependencies": {
+    "@prisma/client": "^6.13.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.0.14",
     "@types/react": "19.1.8",
     "autoprefixer": "^10.4.21",
+    "i": "^0.3.7",
+    "npm": "^11.5.2",
     "postcss": "^8.5.6",
-    "prisma": "^6.12.0",
+    "prisma": "^6.13.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
     "typescript": "5.8.3"
